--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,20 @@
     padding: 0;
 }
 
-.container{
-    height: 320px;
-    background-color: rgb(231, 230, 230);
-}
-
 .time{
     font-size: 80px;
     color: gray;
+    font-family: "Orbitron", sans-serif;
+}
+
+.cronometro{
+    position: absolute;
+    left: 510px;
+    top: 200px;
+    border-radius: 10px;
+    height: 240px;
+    padding: 30px;
+    background-color: rgb(237, 237, 238);
 }
 
  
